test/integration/ingress/manifests/basic/ok/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-echo
spec:
  ingressClassName: hug
  rules:
    - host: example.ingress
      http:
        paths:
          - path: /path1
            pathType: Prefix
            backend:
              service:
                name: http-echo
                port:
                  number: 80
